first commit on costomized branch

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,6 @@
-<h1 class="mt-4" >Dashboard</h1>
-<p class="lead mb-3"> welcome <%= user %></p>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
+
+<div class=" mt-5 center">
+        <div class="jumbotron">
+            <h1 class="display-3">Welcome <strong><%= user %></strong></h1>
+         </div>
+</div>
