--- a/views/layouts/authLayout.ejs
+++ b/views/layouts/authLayout.ejs
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--bootswatch theme --> 
-    <link rel="stylesheet" type="text/css" href=" https://bootswatch.com/4/pulse/bootstrap.min.css">
-    <!--Font Awesome link --> 
+    <link rel="stylesheet" type="text/css" href="../static/css/theme.min.css">
+     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <title>Passport Login System</title>
 </head>
 <body>
-    <div class="container">
+    <div>
         <%- body %>
     </div>
-    
     <!--js bootstrap scrips for flash messages-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
